--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css?v=1">
+	<link rel="stylesheet" href="css/main.min.css?v=2">
 </head>
 
 <body>
@@ -168,6 +168,6 @@
 		</div>
 	<!-- modal end-->
 
-	<script src="js/scripts.js"></script>
+	<script src="js/scripts.min.js"></script>
 </body>
 </html>
